feat: update requirements.txt to remove unused dependencies and add new packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,16 @@
-appnope==0.1.4
-asttokens==3.0.0
 blinker==1.8.2
 click==8.1.7
-comm==0.2.2
-debugpy==1.8.9
-decorator==5.1.1
-executing==2.1.0
 Flask==3.0.3
 Flask-SQLAlchemy==3.1.1
-graphviz==0.20.3
-iniconfig==2.0.0
-ipykernel==6.29.5
-ipython==8.30.0
 itsdangerous==2.2.0
-jedi==0.19.2
 Jinja2==3.1.4
-jupyter_client==8.6.3
-jupyter_core==5.7.2
 MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
-nest-asyncio==1.6.0
-packaging==24.2
-parso==0.8.4
-pexpect==4.9.0
-platformdirs==4.3.6
-pluggy==1.5.0
-prompt_toolkit==3.0.48
-psutil==6.1.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-Pygments==2.18.0
-pytest==8.3.3
-python-dateutil==2.9.0.post0
-pyzmq==26.2.0
-six==1.16.0
 SQLAlchemy==2.0.36
-stack-data==0.6.3
-tornado==6.4.2
-traitlets==5.14.3
 typing_extensions==4.12.2
-wcwidth==0.2.13
 Werkzeug==3.0.4
+flask-sqlalchemy==3.1.1
+pytest==8.3.3
+openai==0.27.0
+python-dotenv==1.0.0
+gunicorn==21.2.0
+google-generativeai==0.8.3
