--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,8 @@ jobs:
         run: |
           sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@$SSH_IP <<'EOF'
           set -e
-          cd ${{ secrets.PROJECT_ROOT }}
-          git pull origin main
+          #cd ${{ secrets.PROJECT_ROOT }}
+          git pull origin dev
           docker-compose -f docker-compose.dev.yml down
           docker-compose -f docker-compose.dev.yml up -d --build
           EOF
