--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,8 +44,8 @@ jobs:
           set -e
           cd ${{ secrets.PROJECT_ROOT }}
           git pull origin dev
-          docker-compose -f docker-compose.dev.yml down
-          docker-compose -f docker-compose.dev.yml up -d --build
+          docker compose -f docker-compose.dev.yml down
+          docker compose -f docker-compose.dev.yml up -d --build
           EOF
         env:
           SSH_IP: ${{ secrets.SSH_IP }}
