--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,5 +10,24 @@ services:
       - "8080:8080"
     volumes:
       - ./instance:/app/instance  # Persist the SQLite database file
+  
+  nginx:
+    container_name: nginx
+    image: jonasal/nginx-certbot
+    restart: always
+    environment:
+      - CERTBOT_EMAIL=duko102003@gmail.com
+      - NGINX_HOST=hc-feedback.duckdns.org  # Domain name
+      - NGINX_PORT=80
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - nginx_secrets:/etc/letsencrypt         # SSL certificates
+      - ./user_conf.d:/etc/nginx/conf.d   # Custom NGINX configurations
+      - ./data/certbot:/var/www/certbot        # Certbot validation directory
+    depends_on:
+      - hc-feedback
 
-volumes: {}
+volumes: 
+  nginx_secrets:
