--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,7 +17,7 @@ services:
     restart: always
     environment:
       - CERTBOT_EMAIL=duko102003@gmail.com
-      - NGINX_HOST=hc-feedback.duckdns.org  # Domain name
+      - NGINX_HOST=hc-feedback-tool.duckdns.org  # Domain name
       - NGINX_PORT=80
     ports:
       - 80:80
