--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 GENAI_API_KEY="" # Your GenAI API key - ideally gemini-1.5-flash-8b
+GEMINI_MODEL_NAME="gemini-1.5-flash"
+
+SCORE_THRESHOLD=0.8 # For footnote generator
