--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ typing_extensions==4.12.2
 Werkzeug==3.0.4
 flask-sqlalchemy==3.1.1
 pytest==8.3.3
+pytest-cov==4.1.0
 python-dotenv==1.0.0
 gunicorn==21.2.0
 google-generativeai==0.8.3
