--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install Dependencies
         run: python3-virtualenv/bin/pip install -r requirements.txt
 
+      - name: Grant execute permission to script
+        run: chmod +x ./run_test.sh
+
       - name: Run Tests
         run: ./run_test.sh  # Fixed indentation here
 
